# egg-drop

./: README.md  setup.cfg
src/egg_drop/: __init__.py
