[metadata]
name = egg-drop
version = 1.0.0
author = Matt <3
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/egg-drop
description = wip
long_description = file: README.md
long_description_content_type = text/markdown
keywords = word of the day, wattba
license = UNLICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: UNLICENSE

[options]
package_dir =
  = src
packages = find:
install_requires =
  beautifulsoup4 >= 4.12.3 
  boto3 >= 1.34.45 
  requests >= 2.31.0 
  python-dotenv


[options.packages.find]
where = src
exclude =
  examples*
  tools*
  docs*

[options.entry_points]
console_scripts = 
  egg-drop = egg_drop:check_for_eggs

[options.package_data]
* = README.md

[options.extras_require]
dev =
  pyright >= 1.1.0
  pytest >= 7.0.0
  flake8 >= 7.0.0

[flake8]
max-line-length = 120

